<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailActivity">


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="40dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_arrow_back_24"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/place_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/cv_back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cv_back_button"
            app:layout_constraintTop_toTopOf="@id/cv_back_button" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_image_header"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_place">

            <ImageView
                android:id="@+id/iv_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/bumi_perkemahan_karang_kirti_1"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/nulla_sit_amet_arcu_ultrices_fringilla_enim_ut_dictum_lacus_sed_at_urna_lacus_sed_rhoncus_bibendum_dui_in_dignissim_vestibulum_ut_eros_posuere_tristique_enim_non_tempus_mi_vestibulum_ante_ipsum_primis_in_faucibus_orci_luctus_et_ultrices_posuere_cubilia_curae_curabitur_at_velit_dui_curabitur_nec_risus_vel_sem_finibus_ultricies_a_quis_tellus_duis_dapibus_elit_ut_luctus_viverra"
            android:textColor="#BB000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/cv_image_header"
            app:layout_constraintStart_toStartOf="@id/cv_image_header"
            app:layout_constraintTop_toBottomOf="@id/cv_image_header" />

        <TextView
            android:id="@+id/tv_location_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/cv_image_header"
            app:layout_constraintStart_toStartOf="@id/cv_image_header"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <TextView
            android:id="@+id/tv_location_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/jl_bekasi"
            android:textColor="#BB000000"
            app:layout_constraintEnd_toEndOf="@id/cv_image_header"
            app:layout_constraintStart_toStartOf="@id/cv_image_header"
            app:layout_constraintTop_toBottomOf="@id/tv_location_title" />

        <TextView
            android:id="@+id/tv_operation_hours_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/operation_hours"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/cv_image_header"
            app:layout_constraintStart_toStartOf="@id/cv_image_header"
            app:layout_constraintTop_toBottomOf="@id/tv_location_content" />

        <TextView
            android:id="@+id/tv_operation_hours_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/_24_jam"
            android:textColor="#BB000000"
            app:layout_constraintEnd_toEndOf="@id/cv_image_header"
            app:layout_constraintStart_toStartOf="@id/cv_image_header"
            app:layout_constraintTop_toBottomOf="@id/tv_operation_hours_title" />

        <TextView
            android:id="@+id/tv_ticket_prices_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ticket_price"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/cv_image_header"
            app:layout_constraintStart_toStartOf="@id/cv_image_header"
            app:layout_constraintTop_toBottomOf="@id/tv_operation_hours_content" />

        <TextView
            android:id="@+id/tv_ticket_prices_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/rp_100_000"
            android:textColor="#BB000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/cv_image_header"
            app:layout_constraintStart_toStartOf="@id/cv_image_header"
            app:layout_constraintTop_toBottomOf="@id/tv_ticket_prices_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>